syntax = "proto3";

package sap.i40aas.interaction;
option java_multiple_files = true;
option java_package = "sap.i40aas.interaction.proto";
option go_package = "github.com/sap/i40-aas/interaction";
// option java_generic_services = true;

import "google/protobuf/any.proto";

service InteractionIngress {
  rpc SendInteractionMessage(InteractionMessage) returns (InteractionStatus) {}
}

message InteractionStatus {
  InteractionStatusCode code = 1;
}

enum InteractionStatusCode {
  UNKNOWN = 0;
  OK = 200;
  FAILED = 500;
}

message InteractionMessage {
  Frame frame = 1;
  repeated google.protobuf.Any interactionElements = 2;
}

message Frame {
  string semanticProtocol = 1;
  string type = 2;
  string messageId = 3;
  uint32 replyBy = 4;
  ConversationMember receiver = 5;
  ConversationMember sender = 6;
  string conversationId = 7;
}

message ConversationMember {
  Identification identification = 1;
  Role role = 2;
}

message Role {
  string name = 1;
}

message Identification {
  string id = 1;
  string idType = 2;
}


message Submodel {
  string idShort = 1;
  ModelType modelType = 2;
  Identifier identification = 3;
  AdministrativeInformation administration = 4;
  string category = 5;
  repeated LangString description = 6;
  Reference parent = 7;
  repeated EmbeddedDataSpecification embeddedDataSpecifications = 8;
  repeated Constraint qualifiers = 9;
  Reference semanticId = 10;
  string kind = 11;
  repeated SubmodelElement submodelElements = 12;
}

message ConceptDescription {}

message Referable {
  string idShort = 1;
  ModelType modelType = 2;
  string category = 3;
  repeated LangString description = 4;
  Reference parent = 5;
}

message Identifiable {
  string idShort = 1;
  ModelType modelType = 2;
  Identifier identification = 3;
  AdministrativeInformation administration = 4;
  string category = 5;
  repeated LangString description = 6;
  Reference parent = 7;
}

message Qualifiable {
  repeated Constraint qualifiers = 1;
}

message HasSemantics {
  Reference semanticId = 1;
}

message HasDataSpecification {
  repeated EmbeddedDataSpecification embeddedDataSpecifications = 1;
}

message Identifier {
  string id = 1;
  string idType = 2;
}

message AdministrativeInformation {
  string properties = 1;
  string revision = 2;
}

message LangString {
  string language = 1;
  string text = 2;
}

message Reference {
  repeated Key keys = 1;
}

message Key {
  string type = 1;
  string idType = 2;
  string value = 3;
  bool local = 4;
}

message ModelType {
  string name = 1;
}

message SubmodelElement {
  string idShort = 1;
  ModelType modelType = 2;
  string category = 3;
  repeated LangString description = 4;
  Reference parent = 5;
  repeated EmbeddedDataSpecification embeddedDataSpecifications = 6;
  Reference semanticId = 7;
  repeated Constraint qualifiers = 8;
  string kind = 9;
  string value = 10;
}

message EmbeddedDataSpecification {
  Reference dataSpecification = 1;
}

message Constraint {
  ModelType modelType = 1;

}

